--- a/web-developer.html
+++ b/web-developer.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/AngeionGroup/743999698528265-web-developer'>Angeion Group Web Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Philadelphia, PAUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/catapultsports/jobs/1937028'>Job Application for Senior Full Stack Web Developer at Catapult Sports</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/catapultsports/jobs/1937028'>Job Application for Senior Full Stack Web Developer at Catapult Sports</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p>19 hours ago ... Pepper has a job opening for PHP Web Developer (m/f/x) in Winnipeg (published
 : 08.08.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=op37afwt&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=npE1nMwI'>MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=op37afwt&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=npE1nMwI'>MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -177,7 +177,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovsFafww&__jvst=Employee&__jvsd=sASKdiwc&__jvsc=Twitter&bid=nMsgnMw8'>Ingram Micro Careers - Senior Web frontend developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovsFafww&__jvst=Employee&__jvsd=sASKdiwc&__jvsc=Twitter&bid=nMsgnMw8'>Ingram Micro Careers - Senior Web frontend developer</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -201,7 +201,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268852-senior-web-developer'>KSM Consulting Senior Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268852-senior-web-developer'>KSM Consulting Senior Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -227,7 +227,7 @@
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ovV5afwp&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=n3kNmMwN'>Compuware Careers - Entry-level Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ovV5afwp&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=n3kNmMwN'>Compuware Careers - Entry-level Web Developer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -287,7 +287,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/scaledagile/job/okfpbfwT'>Scaled Agile Careers - Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/scaledagile/job/okfpbfwT'>Scaled Agile Careers - Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -295,7 +295,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://interactive-tools.join.com/jobs/455622-web-developer-typo3-w-m-d'>Job @ interactive tools   (Berlin): Web Developer ... | JOIN</a></h5> 
+<h5><a href='https://interactive-tools.join.com/jobs/455622-web-developer-typo3-w-m-d'>Job @ interactive tools   (Berlin): Web Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -345,7 +345,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
+<h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
 	Front-End Web Designer/Developer - HellermannTyton - Big Shoes Network, Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -363,7 +363,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhgaVfwm&k=Job&j=okfpbfwT&__jvst=Employee&__jvsd=sPAjBgw4&__jvsc=Twitter&bid=nYellMw9'>Scaled Agile Careers - Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhgaVfwm&k=Job&j=okfpbfwT&__jvst=Employee&__jvsd=sPAjBgw4&__jvsc=Twitter&bid=nYellMw9'>Scaled Agile Careers - Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -373,7 +373,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickar.join.com/jobs/461911-intern-as-web-developer'>Job @ pickar (Remote): Intern as Web Developer | JOIN</a></h5> 
+<h5><a href='https://pickar.join.com/jobs/461911-intern-as-web-developer'>Job @ pickar (Remote): Intern as Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -389,7 +389,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://enmacc.join.com/jobs/456696-senior-java-web-developer-m-f-d'>Job @ Enmacc (Munich): Senior Java Web Developer (... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://enmacc.join.com/jobs/456696-senior-java-web-developer-m-f-d'>Job @ Enmacc (Munich): Senior Java Web Developer (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
