--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://archilogic.join.com/jobs/469276-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  San Francisco Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -98,7 +102,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -156,7 +160,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -218,7 +222,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -333,7 +337,7 @@ believes?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/F80327DA5A'>leadtech - Jobs: Site Reliability Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/F80327DA5A'>leadtech - Jobs: Site Reliability Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Site Reliability Engineer at leadtech.</p>
 <hr/>
@@ -358,7 +362,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/72121fbc-80d7-4273-9511-4095d127fd92'>Carta - Senior+ Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/72121fbc-80d7-4273-9511-4095d127fd92'>Carta - Senior+ Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -388,7 +392,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/backcountry/job/oJKvafwS'>Backcountry Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/backcountry/job/oJKvafwS'>Backcountry Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -449,10 +453,6 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <h5><a href='https://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-16</p>
-<hr/>
-<h5><a href='https://www.mongodb.com/careers/job/?gh_jid=66414&gh_src=49cb105f1'>Site Reliability Engineer | MongoDB</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-16</p>
 <hr/>
 
 
