--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia Melbourne Australia Melbourne</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -120,13 +120,13 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Washington, District of Columbia  San Francisco, California  Los Angeles, California  Atlanta, Georgia  Seattle, Washington  Philadelphia, Pennsylvania  Chicago, Illinois  Los Angeles, California  New York, New York</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
+<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 18, 2019 ... At Adobe, you'll join our Legal Privacy, Trust & Safety team. We're seeking a 
 passionate, collaborative, and thoughtful legal specialist, who has prior 
 experience?...</p>
 <hr/>
-<h5><a href='https://www.gobiglaw.com/jobs/19075822-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP in Los Angeles, California | GoBiglaw.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.gobiglaw.com/jobs/19075822-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP in Los Angeles, California | GoBiglaw.com</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
@@ -206,7 +206,7 @@ trust?...</p>
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA Sugar Land, TX</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -218,7 +218,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -234,7 +234,7 @@ privacy?...</p>
 Privacy Office based in Cork, Ireland. You would work directly with the European
 ?...</p>
 <hr/>
-<h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 14, 2019 ... programs and services. The Data Privacy/Compliance Specialist will be 
 responsible for facilitating the development and implementation of a data privacy 
@@ -278,11 +278,11 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/b91a4c3b-105c-4a48-90e4-436ecfbc28c3'>Geotab - Data Privacy Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/b91a4c3b-105c-4a48-90e4-436ecfbc28c3'>Geotab - Data Privacy Engineer</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -393,7 +393,7 @@ Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 industry, with a career where you will have the opportunity to collaborate and 
 affect?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1671975'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1671975'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-05-02</p>
 <hr/>
@@ -429,7 +429,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
